syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.upblockchain.proto.ethereum";
option java_outer_classname = "JsonRPCProto";

// The request message containing the user's name.
message JsonRPCRequest {
    string request = 1;
}

// The response message containing the greetings
message JsonRPCResponse {
    string response = 1;
}